# go-greet

./: .drone.yml  BUILD.bazel  Jenkinsfile  Makefile  README.md  WORKSPACE  greet.go  greet_test.go
cmd/greet/: BUILD.bazel  main.go
greeter_client/: BUILD.bazel  main.go
greeter_server/: BUILD.bazel  main.go
helloworld/: BUILD.bazel
jnlp-slave-bazel/: Dockerfile
