load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_prefix", "go_test")

go_prefix("github.com/twpayne/go-greet")

go_library(
    name = "go_default_library",
    srcs = ["greet.go"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["greet_test.go"],
    library = ":go_default_library",
)
